@@ -56,6 +56,10 @@ namespace std {
   public:
     __basic_file(__c_lock* __lock = 0);
 
+    void 
+    __basic_file::_M_open_mode(ios_base::openmode __mode, int& __p_mode, 
+			       int& __rw_mode);
+
     // Eqivalent to the normal fopen function.
     __basic_file* 
     open(const char* __name, ios_base::openmode __mode, int __prot = 0664);
